feat: initial change to package JDK8 and JDK11+

--- a/dev/tasks/tasks.yml
+++ b/dev/tasks/tasks.yml
@@ -745,35 +745,45 @@ tasks:
       - arrow-algorithm-{no_rc_snapshot_version}-javadoc.jar
       - arrow-algorithm-{no_rc_snapshot_version}-sources.jar
       - arrow-algorithm-{no_rc_snapshot_version}-tests.jar
+      - arrow-algorithm-{no_rc_snapshot_version}-jdk8tests.jar
       - arrow-algorithm-{no_rc_snapshot_version}.jar
+      - arrow-algorithm-{no_rc_snapshot_version}-jdk8.jar
       - arrow-algorithm-{no_rc_snapshot_version}.pom
       - arrow-avro-{no_rc_snapshot_version}-cyclonedx.json
       - arrow-avro-{no_rc_snapshot_version}-cyclonedx.xml
       - arrow-avro-{no_rc_snapshot_version}-javadoc.jar
       - arrow-avro-{no_rc_snapshot_version}-sources.jar
       - arrow-avro-{no_rc_snapshot_version}-tests.jar
+      - arrow-avro-{no_rc_snapshot_version}-jdk8tests.jar
       - arrow-avro-{no_rc_snapshot_version}.jar
+      - arrow-avro-{no_rc_snapshot_version}-jdk8.jar
       - arrow-avro-{no_rc_snapshot_version}.pom
       - arrow-c-data-{no_rc_snapshot_version}-cyclonedx.json
       - arrow-c-data-{no_rc_snapshot_version}-cyclonedx.xml
       - arrow-c-data-{no_rc_snapshot_version}-javadoc.jar
       - arrow-c-data-{no_rc_snapshot_version}-sources.jar
       - arrow-c-data-{no_rc_snapshot_version}-tests.jar
+      - arrow-c-data-{no_rc_snapshot_version}-jdk8tests.jar
       - arrow-c-data-{no_rc_snapshot_version}.jar
+      - arrow-c-data-{no_rc_snapshot_version}-jdk8.jar
       - arrow-c-data-{no_rc_snapshot_version}.pom
       - arrow-compression-{no_rc_snapshot_version}-cyclonedx.json
       - arrow-compression-{no_rc_snapshot_version}-cyclonedx.xml
       - arrow-compression-{no_rc_snapshot_version}-javadoc.jar
       - arrow-compression-{no_rc_snapshot_version}-sources.jar
       - arrow-compression-{no_rc_snapshot_version}-tests.jar
+      - arrow-compression-{no_rc_snapshot_version}-jdk8tests.jar
       - arrow-compression-{no_rc_snapshot_version}.jar
+      - arrow-compression-{no_rc_snapshot_version}-jdk8.jar
       - arrow-compression-{no_rc_snapshot_version}.pom
       - arrow-dataset-{no_rc_snapshot_version}-cyclonedx.json
       - arrow-dataset-{no_rc_snapshot_version}-cyclonedx.xml
       - arrow-dataset-{no_rc_snapshot_version}-javadoc.jar
       - arrow-dataset-{no_rc_snapshot_version}-sources.jar
       - arrow-dataset-{no_rc_snapshot_version}-tests.jar
+      - arrow-dataset-{no_rc_snapshot_version}-jdk8tests.jar
       - arrow-dataset-{no_rc_snapshot_version}.jar
+      - arrow-dataset-{no_rc_snapshot_version}-jdk8.jar
       - arrow-dataset-{no_rc_snapshot_version}.pom
       - arrow-flight-{no_rc_snapshot_version}-cyclonedx.json
       - arrow-flight-{no_rc_snapshot_version}-cyclonedx.xml
@@ -783,14 +793,18 @@ tasks:
       - arrow-format-{no_rc_snapshot_version}-javadoc.jar
       - arrow-format-{no_rc_snapshot_version}-sources.jar
       - arrow-format-{no_rc_snapshot_version}-tests.jar
+      - arrow-format-{no_rc_snapshot_version}-jdk8tests.jar
       - arrow-format-{no_rc_snapshot_version}.jar
+      - arrow-format-{no_rc_snapshot_version}-jdk8.jar
       - arrow-format-{no_rc_snapshot_version}.pom
       - arrow-gandiva-{no_rc_snapshot_version}-cyclonedx.json
       - arrow-gandiva-{no_rc_snapshot_version}-cyclonedx.xml
       - arrow-gandiva-{no_rc_snapshot_version}-javadoc.jar
       - arrow-gandiva-{no_rc_snapshot_version}-sources.jar
       - arrow-gandiva-{no_rc_snapshot_version}-tests.jar
+      - arrow-gandiva-{no_rc_snapshot_version}-jdk8tests.jar
       - arrow-gandiva-{no_rc_snapshot_version}.jar
+      - arrow-gandiva-{no_rc_snapshot_version}-jdk8.jar
       - arrow-gandiva-{no_rc_snapshot_version}.pom
       - arrow-java-root-{no_rc_snapshot_version}-cyclonedx.json
       - arrow-java-root-{no_rc_snapshot_version}-cyclonedx.xml
@@ -801,28 +815,36 @@ tasks:
       - arrow-jdbc-{no_rc_snapshot_version}-javadoc.jar
       - arrow-jdbc-{no_rc_snapshot_version}-sources.jar
       - arrow-jdbc-{no_rc_snapshot_version}-tests.jar
+      - arrow-jdbc-{no_rc_snapshot_version}-jdk8tests.jar
       - arrow-jdbc-{no_rc_snapshot_version}.jar
+      - arrow-jdbc-{no_rc_snapshot_version}-jdk8.jar
       - arrow-jdbc-{no_rc_snapshot_version}.pom
       - arrow-memory-core-{no_rc_snapshot_version}-cyclonedx.json
       - arrow-memory-core-{no_rc_snapshot_version}-cyclonedx.xml
       - arrow-memory-core-{no_rc_snapshot_version}-javadoc.jar
       - arrow-memory-core-{no_rc_snapshot_version}-sources.jar
       - arrow-memory-core-{no_rc_snapshot_version}-tests.jar
+      - arrow-memory-core-{no_rc_snapshot_version}-jdk8tests.jar
       - arrow-memory-core-{no_rc_snapshot_version}.jar
+      - arrow-memory-core-{no_rc_snapshot_version}-jdk8.jar
       - arrow-memory-core-{no_rc_snapshot_version}.pom
       - arrow-memory-netty-{no_rc_snapshot_version}-cyclonedx.json
       - arrow-memory-netty-{no_rc_snapshot_version}-cyclonedx.xml
       - arrow-memory-netty-{no_rc_snapshot_version}-javadoc.jar
       - arrow-memory-netty-{no_rc_snapshot_version}-sources.jar
       - arrow-memory-netty-{no_rc_snapshot_version}-tests.jar
+      - arrow-memory-netty-{no_rc_snapshot_version}-jdk8tests.jar
       - arrow-memory-netty-{no_rc_snapshot_version}.jar
+      - arrow-memory-netty-{no_rc_snapshot_version}-jdk8.jar
       - arrow-memory-netty-{no_rc_snapshot_version}.pom
       - arrow-memory-unsafe-{no_rc_snapshot_version}-cyclonedx.json
       - arrow-memory-unsafe-{no_rc_snapshot_version}-cyclonedx.xml
       - arrow-memory-unsafe-{no_rc_snapshot_version}-javadoc.jar
       - arrow-memory-unsafe-{no_rc_snapshot_version}-sources.jar
       - arrow-memory-unsafe-{no_rc_snapshot_version}-tests.jar
+      - arrow-memory-unsafe-{no_rc_snapshot_version}-jdk8tests.jar
       - arrow-memory-unsafe-{no_rc_snapshot_version}.jar
+      - arrow-memory-unsafe-{no_rc_snapshot_version}-jdk8.jar
       - arrow-memory-unsafe-{no_rc_snapshot_version}.pom
       - arrow-memory-{no_rc_snapshot_version}-cyclonedx.json
       - arrow-memory-{no_rc_snapshot_version}-cyclonedx.xml
@@ -832,13 +854,17 @@ tasks:
       - arrow-orc-{no_rc_snapshot_version}-javadoc.jar
       - arrow-orc-{no_rc_snapshot_version}-sources.jar
       - arrow-orc-{no_rc_snapshot_version}-tests.jar
+      - arrow-orc-{no_rc_snapshot_version}-jdk8tests.jar
       - arrow-orc-{no_rc_snapshot_version}.jar
+      - arrow-orc-{no_rc_snapshot_version}-jdk8.jar
       - arrow-orc-{no_rc_snapshot_version}.pom
       - arrow-performance-{no_rc_snapshot_version}-cyclonedx.json
       - arrow-performance-{no_rc_snapshot_version}-cyclonedx.xml
       - arrow-performance-{no_rc_snapshot_version}-sources.jar
       - arrow-performance-{no_rc_snapshot_version}-tests.jar
+      - arrow-performance-{no_rc_snapshot_version}-jdk8tests.jar
       - arrow-performance-{no_rc_snapshot_version}.jar
+      - arrow-performance-{no_rc_snapshot_version}-jdk8.jar
       - arrow-performance-{no_rc_snapshot_version}.pom
       - arrow-tools-{no_rc_snapshot_version}-cyclonedx.json
       - arrow-tools-{no_rc_snapshot_version}-cyclonedx.xml
@@ -846,7 +872,9 @@ tasks:
       - arrow-tools-{no_rc_snapshot_version}-javadoc.jar
       - arrow-tools-{no_rc_snapshot_version}-sources.jar
       - arrow-tools-{no_rc_snapshot_version}-tests.jar
+      - arrow-tools-{no_rc_snapshot_version}-jdk8tests.jar
       - arrow-tools-{no_rc_snapshot_version}.jar
+      - arrow-tools-{no_rc_snapshot_version}-jdk8.jar
       - arrow-tools-{no_rc_snapshot_version}.pom
       - arrow-vector-{no_rc_snapshot_version}-cyclonedx.json
       - arrow-vector-{no_rc_snapshot_version}-cyclonedx.xml
@@ -854,7 +882,9 @@ tasks:
       - arrow-vector-{no_rc_snapshot_version}-shade-format-flatbuffers.jar
       - arrow-vector-{no_rc_snapshot_version}-sources.jar
       - arrow-vector-{no_rc_snapshot_version}-tests.jar
+      - arrow-vector-{no_rc_snapshot_version}-jdk8tests.jar
       - arrow-vector-{no_rc_snapshot_version}.jar
+      - arrow-vector-{no_rc_snapshot_version}-jdk8.jar
       - arrow-vector-{no_rc_snapshot_version}.pom
       - flight-core-{no_rc_snapshot_version}-cyclonedx.json
       - flight-core-{no_rc_snapshot_version}-cyclonedx.xml
@@ -864,14 +894,18 @@ tasks:
       - flight-core-{no_rc_snapshot_version}-shaded.jar
       - flight-core-{no_rc_snapshot_version}-sources.jar
       - flight-core-{no_rc_snapshot_version}-tests.jar
+      - flight-core-{no_rc_snapshot_version}-jdk8tests.jar
       - flight-core-{no_rc_snapshot_version}.jar
+      - flight-core-{no_rc_snapshot_version}-jdk8.jar
       - flight-core-{no_rc_snapshot_version}.pom
       - flight-grpc-{no_rc_snapshot_version}-cyclonedx.json
       - flight-grpc-{no_rc_snapshot_version}-cyclonedx.xml
       - flight-grpc-{no_rc_snapshot_version}-javadoc.jar
       - flight-grpc-{no_rc_snapshot_version}-sources.jar
       - flight-grpc-{no_rc_snapshot_version}-tests.jar
+      - flight-grpc-{no_rc_snapshot_version}-jdk8tests.jar
       - flight-grpc-{no_rc_snapshot_version}.jar
+      - flight-grpc-{no_rc_snapshot_version}-jdk8.jar
       - flight-grpc-{no_rc_snapshot_version}.pom
       - flight-integration-tests-{no_rc_snapshot_version}-cyclonedx.json
       - flight-integration-tests-{no_rc_snapshot_version}-cyclonedx.xml
@@ -879,27 +913,35 @@ tasks:
       - flight-integration-tests-{no_rc_snapshot_version}-javadoc.jar
       - flight-integration-tests-{no_rc_snapshot_version}-sources.jar
       - flight-integration-tests-{no_rc_snapshot_version}-tests.jar
+      - flight-integration-tests-{no_rc_snapshot_version}-jdk8tests.jar
       - flight-integration-tests-{no_rc_snapshot_version}.jar
+      - flight-integration-tests-{no_rc_snapshot_version}-jdk8.jar
       - flight-integration-tests-{no_rc_snapshot_version}.pom
       - flight-sql-{no_rc_snapshot_version}-cyclonedx.json
       - flight-sql-{no_rc_snapshot_version}-cyclonedx.xml
       - flight-sql-{no_rc_snapshot_version}-javadoc.jar
       - flight-sql-{no_rc_snapshot_version}-sources.jar
       - flight-sql-{no_rc_snapshot_version}-tests.jar
+      - flight-sql-{no_rc_snapshot_version}-jdk8tests.jar
       - flight-sql-{no_rc_snapshot_version}.jar
+      - flight-sql-{no_rc_snapshot_version}-jdk8.jar
       - flight-sql-{no_rc_snapshot_version}.pom
       - flight-sql-jdbc-core-{no_rc_snapshot_version}-cyclonedx.json
       - flight-sql-jdbc-core-{no_rc_snapshot_version}-cyclonedx.xml
       - flight-sql-jdbc-core-{no_rc_snapshot_version}-javadoc.jar
       - flight-sql-jdbc-core-{no_rc_snapshot_version}-sources.jar
       - flight-sql-jdbc-core-{no_rc_snapshot_version}-tests.jar
+      - flight-sql-jdbc-core-{no_rc_snapshot_version}-jdk8tests.jar
       - flight-sql-jdbc-core-{no_rc_snapshot_version}.jar
+      - flight-sql-jdbc-core-{no_rc_snapshot_version}-jdk8.jar
       - flight-sql-jdbc-core-{no_rc_snapshot_version}.pom
       - flight-sql-jdbc-driver-{no_rc_snapshot_version}-cyclonedx.json
       - flight-sql-jdbc-driver-{no_rc_snapshot_version}-cyclonedx.xml
       - flight-sql-jdbc-driver-{no_rc_snapshot_version}-sources.jar
       - flight-sql-jdbc-driver-{no_rc_snapshot_version}-tests.jar
+      - flight-sql-jdbc-driver-{no_rc_snapshot_version}-jdk8tests.jar
       - flight-sql-jdbc-driver-{no_rc_snapshot_version}.jar
+      - flight-sql-jdbc-driver-{no_rc_snapshot_version}-jdk8.jar
       - flight-sql-jdbc-driver-{no_rc_snapshot_version}.pom
 
   ############################## NuGet packages ###############################
