--- a/java/algorithm/pom.xml
+++ b/java/algorithm/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.apache.arrow</groupId>
     <artifactId>arrow-java-root</artifactId>
-    <version>13.0.0-SNAPSHOT</version>
+    <version>15.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>arrow-algorithm</artifactId>
   <name>Arrow Algorithms</name>
@@ -25,7 +25,8 @@
       <groupId>org.apache.arrow</groupId>
       <artifactId>arrow-vector</artifactId>
       <version>${project.version}</version>
-      <classifier>${arrow.vector.classifier}</classifier>
+<!--      <classifier>${arrow.vector.classifier}</classifier>-->
+      <classifier>shade-format-flatbuffers</classifier>
     </dependency>
     <dependency>
       <groupId>org.apache.arrow</groupId>
