--- a/.asf.yaml
+++ b/.asf.yaml
@@ -26,6 +26,11 @@ github:
     - felipecrv
     - mapleFU
 
+  protected_branches:
+    main:
+      required_pull_request_reviews:
+        required_approving_review_count: 1
+
 notifications:
   commits:      commits@arrow.apache.org
   issues_status: issues@arrow.apache.org
